# IC3Ref

./: .gitignore  IC3.cpp  Model.cpp  Model.h  README.md  meson.build
minisat/core/: Solver.cc  SolverTypes.h
minisat/mtl/: IntTypes.h
minisat/utils/: Options.h  System.cc
