
project('IC3ref', ['c', 'cpp'])

inc = include_directories('.', 'aiger', 'minisat', 'minisat/core', 'minisat/simp', 'minisat/utils', 'minisat/mtl')

sources = [
  'IC3.cpp',
  'Model.cpp',
  'main.cpp',
  # 'aiger/aigand.c',
  'aiger/aiger.c',
  # 'aiger/aigdep.c',
  # 'aiger/aigdd.c',
  # 'aiger/aigflip.c',
  # 'aiger/aigfuzz.c',
  # 'aiger/aigfuzzlayers.c',
  # 'aiger/aiginfo.c',
  # 'aiger/aigjoin.c',
  # 'aiger/aigmiter.c',
  # 'aiger/aigmove.c',
  # 'aiger/aignm.c',
  # 'aiger/aigor.c',
  # 'aiger/aigreset.c',
  # 'aiger/aigselect.c',
  # 'aiger/aigsim.c',
  # 'aiger/aigsplit.c',
  # 'aiger/aigstrip.c',
  # 'aiger/aigtoaig.c',
  # 'aiger/aigtoblif.c',
  # 'aiger/aigtobtor.c',
  # 'aiger/aigtocnf.c',
  # 'aiger/aigtodot.c',
  # 'aiger/aigtosmv.c',
  # 'aiger/aiguncomment.c',
  # 'aiger/aigunconstraint.c',
  # 'aiger/aigunor.c',
  # 'aiger/aigunroll.c',
  # 'aiger/andtoaig.c',
  # 'aiger/bliftoaig.c',
  # 'aiger/jku.c',
  # 'aiger/shrinkaigerwitness.c',
  # 'aiger/simpaig.c',
  # 'aiger/smvtoaig.c',
  # 'aiger/soltostim.c',
  # 'aiger/testaigtoaig.c',
  # 'aiger/testsimpaig.c',
  # 'aiger/wrapstim.c',
  'minisat/core/Solver.cc',
  'minisat/simp/SimpSolver.cc',
  # 'minisat/utils/Options.cc',
  'minisat/utils/System.cc',
]

executable('IC3ref', sources, include_directories : inc)
